# diffStory

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN_MEMORY.md  DESIGN_PLAN.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.json
.claude/: launch.json
.claude-plugin/: marketplace.json  plugin.json
docs/: RELEASE.md  STRANGER_TEST.md  diffstory-logo-directions.html
eval/: GOAL.md  HANDOVER.md  README.md  cases.json
examples/: demo.mjs  review-tour.json  story.json
macos/DiffStoryApp/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
macos/DiffStoryApp/loading/: index.html
macos/DiffStoryApp/src/: main.rs
plans/: 001-unify-motion-tokens.md  002-make-change-navigation-instant.md  003-coalesce-focus-scrolling.md  004-frame-batch-resize-gestures.md  005-remove-readaloud-pulses.md  006-complete-reduced-motion.md  007-make-drawers-spatial.md  008-transform-reading-progress.md  009-make-comment-switching-instant.md  README.md
scripts/: build-browser-assets.mjs  build-icns.mjs  capture-ui-atlas.mjs  eval-stories.mjs  install-macos-app.sh  install-skills.sh  install.sh  setup-kokoro.sh
src/: agent.ts  aloud-client.ts  app-server.ts  brand.ts  change-page.ts  change-view.ts  cli.ts  codex-desktop.ts  codex-tasks.ts  comments.ts  config.ts  coverage.ts  diff-assets.ts  diff-render.ts  diff-view.ts  diff.ts  fs-browse.ts  git.ts  highlight.ts  intra-line.ts  kokoro-tts.ts  live.ts  local-tts.ts  nav.ts  noise.ts  page-assets.ts  picker.ts  progress-ui.ts  progress.ts  prompt.ts  recents.ts  render.ts  repo-setup.ts  repo-state.ts  (+12 more)
(+168 files in other folders)
