[package]
name = "diffstory-macos"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[dependencies]
tauri = { version = "2.11.3", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"

[build-dependencies]
tauri-build = "2.6.3"
png = "0.17.16"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
